move mediation to end of intro; add hyperref

--- a/draft.tex
+++ b/draft.tex
@@ -24,6 +24,13 @@
   \usepackage{setspace}
   \doublespacing
 
+\usepackage[pdftex,
+bookmarks=true,
+bookmarksnumbered=false,
+pdfview=fitH,
+bookmarksopen=true,hyperfootnotes=false]{hyperref}
+
+
 \thispagestyle{empty}
 
 \title{Inefficient Concessions and Mediation} 
@@ -50,7 +57,6 @@ In negotiations with its neighbors, Israel is hesitant to give certain concessio
 
 This holds for concessions other than land. Russia is loathe to cede further autonomy to Chechnya, even though it could hypothetically relieve tensions and reduce violence. If Chechen autonomy could in fact lead to lowered violence, it is possible that this move would be in Russia's best interest. But the Russians perceive, perhaps correctly, that any move towards autonomy might only give Chechens further leverage against the Kremlin. From the Russian perspective, granting the concession of increased autonomy would likely have future costs.
 
-%In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in much of the published literature on international conflict mediation lacks a rigorous theoretical framework.
 
 This paper uses a two-sided Spence signaling (1973) model to propose a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. We then suggest a new explanation for the effectiveness of third-party mediation by demonstrating in a mechanism design framework that a mediator can facilitate more efficient concessions.
 
@@ -60,10 +66,6 @@ While an integral part of conflict literature, concessions have not been adequat
 The literature often views conflicts as bargaining over assets that confer future power. In these cases, a lack of credible commitment can create a holdup problem. A lack of trust prevents the high level of interaction that would otherwise be optimal.
 
 We will approach the commitment problem  through this same general understanding, but modeling a party's willingness to cooperate as private information. A high type is willing to cooperate; a low type has incentives to not cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to make the necessary concessions for peace. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmous Abbas may be a low type, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. %MORE commitment literature needs to be cited here. 
-
-Third party involvement is ubiquitious in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation suspect. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a). It is essential to focus more precisely on the specific actions and environments that make use of a certain type of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has certain manipulative abilities---as defined below. 
-
-Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010). These empirical results, while interesting, have generally lacked strong theoretical foundations. Mediation is used, but why actors use it is not well understood. This paper helps to fill this gap by explaining at least one of meditation's roles. %NEED TO EDIT THIS PARAGRAPH- WHICH EMPIRICAL RESULT!!!!!(S)
 
 Concessions form the centerpiece of the GRIT (graduated and reciprocated initiatives in tension reduction) theory in the psychological literature (Osgood 1962) and have shown ample success in lab settings. Komorita (1973) conducts lab experiments using a repeated Prisoner's Dilemma similar to the setup in our paper and finds costly conciliatory acts (concessions) to be useful in promoting cooperation. De Dreu (1995) likewise uses a lab setting to experiment with concessions and conflict.  %de dreu bases experiments on shelling 60 and bacharach and lawler 81/ lawler 92 about deterrance, the shelling conflict spiral was not fully rejected, but the alternative of deterrance was supported
 In addition to concessions, De Dreu also reports laboratory results on mediation; he concludes that a weaker mediator should work with promises while a more powerful one can be effective with threats.  Larson (1988) and others have applied this framework to political science questions. On the theoretical side, Filson and Werner (2007) use a bargaining setup to explore the sensitivities of costs compared to the sensitivity of giving concessions. 
@@ -91,6 +93,16 @@ While these several explanations for inefficiency are interesting, we propose an
 %Since neither the models exemplified by Camerer nor Prendergast and Stole uses a truly general formulation to yield inefficient gift giving % in a one-shot setting,
 This paper expands upon the existing literature by generalizing the analysis using mechanism design theory more extensively than has been done thus far. %The analysis for this paper is more extensive than any of the published papers mentioned and shows where mechanisms can and cannot improve upon the benchmark bilateral results. 
 The basic model is a costly signaling model, at its root similar to ideas in Spence (1973) and subsequent papers. See Connelly et al. (2011) for a review of the costly signaling literature. In essence, the model shows that if concessions can be later used against the party that gives, then giving inefficient concessions can be in their best interest. While our model is tailored to an international relations setting, the mathematical explanation for inefficient giving of concessions may be more broadly applicable.   
+
+%In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in much of the published literature on international conflict mediation lacks a rigorous theoretical framework.
+
+Third party involvement is ubiquitious in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation suspect. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a). It is essential to focus more precisely on the specific actions and environments that make use of a certain type of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has certain manipulative abilities---as defined below. 
+
+Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010). These empirical results, while interesting, have generally lacked strong theoretical foundations. Mediation is used, but why actors use it is not well understood. This paper helps to fill this gap by explaining at least one of meditation's roles. %NEED TO EDIT THIS PARAGRAPH- WHICH EMPIRICAL RESULT!!!!!(S)
+
+In the theoretical literature, mediation has most recently been modeled using mechanism design (Fey and Ramsay 2008, 2010 and 2011; Bester and Warneryd 2006; and Horner et. al. 2010). 
+
+
 
 \section{Model} %A DIFFERENT MODEL BUT SAME RESULT AS FR 10; THIS SHOULD BUILD OUR CONFIDENCE IN MODELLING. EMPHASIZE SCENARION (EGYPT USRAEL ETC) THAT ARE BETTER TO MODEL WITH Our MODEL. IT CAN ALSO BE THOUGHT OF AS REDUCED FORM OF A BARGAINING MOEL, BUT IT DOES NOT NEED TO BE! NEED TO GIVE EXAMPLES WHERE Our MODEL IS BETTER THAN BARGAINING- EXAMPLES. WHEN TRUST IS AN ISSUE (PUT THIS IN THE TRUST SECTION)
 %Need to add risk aversion in MAIN TEXT
@@ -255,7 +267,7 @@ Whether it is beneficial for high types to settle on the efficient concession or
 This finding of inefficiency is for profoundly different reasons than the literature related to Camerer (1988) or Prendergast and Stole (2001).\footnote{Since our initial setup is essentially identical to Camerer's, the desired inefficiency of  pre-play communication can also be found in our model. With a slight behavioral modification, the reasoning of Prendergast and Stole (2001) can also be had: if a country suffers regret after efficiently giving to a type different than their own, there is a premium for guessing correctly. In Prendergast and Stole the two types are equal except in labeling; in our model, high types and low types are used so there is an incentive for low types to try to pose as high types. Aside from this difference, essentially the same result is found: if countries suffer a ``mismatching'' cost due to giving to the wrong type, they will be hesitant to do so and may offer inefficient concessions.} Instead of being in reaction to a behavioral regret for mismatching or serving as a ay to discourage low types for entering the game altogether, here making concessions inefficient is a device to prevent low types from using those concessions against oneself in the future.
 
 \section{Mediation}
-All results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator which will be modeled as a mechanism. In the theoretical literature, mediation has most recently been modeled using mechanism design (Fey and Ramsay 2008, 2010 and 2011; Bester and Warneryd 2006; and Horner et. al. 2010). 
+All results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator which will be modeled as a mechanism. 
 
 Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz, 2002), much of the literature has focused on self-enforcing mechanisms. If however a credible third party does exist, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does both. 
 
