compact intro discussion of concessions

--- a/draft.tex
+++ b/draft.tex
@@ -55,20 +55,18 @@ When two parties are engaged in conflict and each distrusts the other's willingn
 
 In negotiations with its neighbors, Israel is hesitant to give certain concessions. The Golan Heights, captured from Syria during the 1967 War, is a particular point of contention in Israeli-Syrian relations. While the Golan Heights does not have the West Bank's historic or religious importance, Israel values it for its highly strategic location. The Golan Heights could be a useful concession, but Israel senses that were she to give over the land, Syria may ultimately use the concession against them. This same hesitancy exists with the West Bank settlements. Many are located on hilltops that could offer strategic military outposts for forces hostile to Israel. When it occasionally abandons settlements, Israel generally dismantles all infrastructure, including water and electricity, and bulldozes the buildings. Although inefficient, this reduces the possibility of those settlements being used against Israeli interests. Without trust, the most efficient concessions cannot be made.
 
-This holds for concessions other than land. Russia is loathe to cede further autonomy to Chechnya, even though it could hypothetically relieve tensions and reduce violence. If Chechen autonomy could in fact lead to lowered violence, it is possible that this move would be in Russia's best interest. But the Russians perceive, perhaps correctly, that any move towards autonomy might only give Chechens further leverage against the Kremlin. From the Russian perspective, granting the concession of increased autonomy would likely have future costs.
+This holds for concessions other than land. Russia is loathe to cede further autonomy to Chechnya, even though it could hypothetically relieve tensions and reduce violence. If Chechen autonomy could in fact lead to lowered violence, it is possible that this move would be in Russia's best interest. But the Russians perceive, perhaps correctly, that any move towards autonomy might only give Chechens further leverage against the Kremlin. From the Russian perspective, granting the concession of increased autonomy might have large future costs.
 
+This paper uses a two-sided Spence signaling (1973) model to propose a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. We then suggest a new explanation for the effectiveness of third-party mediation. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to peace.
 
-This paper uses a two-sided Spence signaling (1973) model to propose a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. We then suggest a new explanation for the effectiveness of third-party mediation by demonstrating in a mechanism design framework that a mediator can facilitate more efficient concessions.
+While an integral part of the literature on conflict, concessions have been only partially addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1995), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. When the assets that are the object of the bargaining confer future power, a lack of credible commitment, or trust, can create a holdup problem that prevents the optimal level of cooperation.
 
+In these models war can be averted by splitting the pie (i.e. the disputed territory) in a way acceptable to both parties. Concessions are modeled as offering part of the pie to the other party, and asymmetric information is about each party's \textit{resolve} to fight and/or military capabilities (Arena 2013). In this context, an example of costly signaling would be military preparations for war (Slantchev 2011).
 
-While an integral part of conflict literature, concessions have not been adequately addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1995), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. In these models war can be averted by splitting the pie (i.e. the disputed territory) in a way acceptable to both parties. Concessions are modeled as offering part of the pie to the other party. %LAKE: You need to situation what you’re doing in the bargaining literature and relate your model to its principal results. WAR IS WELL ESTABLISHED AS BARGAINING!!!
+We will approach the commitment problem through this same general understanding, but we model a party's ability to cooperate as private information. A high type is able to cooperate; a low type has incentives not to cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to make the necessary concessions for peace. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmous Abbas may be a low type, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. %MORE commitment literature needs to be cited here. 
 
-The literature often views conflicts as bargaining over assets that confer future power. In these cases, a lack of credible commitment can create a holdup problem. A lack of trust prevents the high level of interaction that would otherwise be optimal.
-
-We will approach the commitment problem  through this same general understanding, but modeling a party's willingness to cooperate as private information. A high type is willing to cooperate; a low type has incentives to not cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to make the necessary concessions for peace. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmous Abbas may be a low type, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. %MORE commitment literature needs to be cited here. 
-
-Concessions form the centerpiece of the GRIT (graduated and reciprocated initiatives in tension reduction) theory in the psychological literature (Osgood 1962) and have shown ample success in lab settings. Komorita (1973) conducts lab experiments using a repeated Prisoner's Dilemma similar to the setup in our paper and finds costly conciliatory acts (concessions) to be useful in promoting cooperation. De Dreu (1995) likewise uses a lab setting to experiment with concessions and conflict.  %de dreu bases experiments on shelling 60 and bacharach and lawler 81/ lawler 92 about deterrance, the shelling conflict spiral was not fully rejected, but the alternative of deterrance was supported
-In addition to concessions, De Dreu also reports laboratory results on mediation; he concludes that a weaker mediator should work with promises while a more powerful one can be effective with threats.  Larson (1988) and others have applied this framework to political science questions. On the theoretical side, Filson and Werner (2007) use a bargaining setup to explore the sensitivities of costs compared to the sensitivity of giving concessions. 
+%Concessions form the centerpiece of the GRIT (graduated and reciprocated initiatives in tension reduction) theory in the psychological literature (Osgood 1962) and have shown ample success in lab settings. Komorita (1973) conducts lab experiments using a repeated Prisoner's Dilemma similar to the setup in our paper and finds costly conciliatory acts (concessions) to be useful in promoting cooperation. De Dreu (1995) likewise uses a lab setting to experiment with concessions and conflict.  %de dreu bases experiments on shelling 60 and bacharach and lawler 81/ lawler 92 about deterrance, the shelling conflict spiral was not fully rejected, but the alternative of deterrance was supported
+%In addition to concessions, De Dreu also reports laboratory results on mediation; he concludes that a weaker mediator should work with promises while a more powerful one can be effective with threats.  Larson (1988) and others have applied this framework to political science questions. On the theoretical side, Filson and Werner (2007) use a bargaining setup to explore the sensitivities of costs compared to the sensitivity of giving concessions. 
 %LAKE: The psychological literature as applied in political science spent a lot of time in the 1970s and 1980s focusing on Graduated Reductions in Tensions (GRIT) as a form of confidence building. See Debbie Larson’s work (she’s at Poli Sci, UCLA, I don’t have the cites handy). This is clearly relevant to your discussion of the laboratory experiments on p.3. BH WATSON'S STARTING SMALL COULD BE RELEVANT HERE
 
 This paper will explore the role of concessions as signals, and not only as ends in themselves. Concessions may play either role -- or both -- in conflict resolution. If concessions are used solely for signaling, this can be considered inefficient as value can be lost. We will examine cases where concessions have material value, signaling value, and both. 
@@ -413,6 +411,8 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Allee, Todd L. and Paul K. Huth. (2006). ``Legitimizing Dispute Settlement: International Legal Rulings as Domestic Political Cover." \emph{American Political Science Review} 100:2, 219-34. 
 
+\item Arena, Philip. (2013). ``Costly Signaling, Resolve, and Martial Effectiveness." Unpublished manuscript. 
+
 \item Beardsley, Kyle. (2010). ``Pain, Pressure, and Political Cover: Explaining Mediation Incidence." \emph{Journal of Peace Research}. 47:2, 395-406. 
 
 \item Beardsley, Kyle, David M. Quinn, Bidisha Biswas, and Jonathan Wilkenfeld. (2006). ``Mediation Style and Crisis Outcomes." \emph{The Journal of Conflict Resolution} 50:1,  58-86. 
@@ -435,7 +435,7 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Connelly, Brian L., S. Trevis Certo, R. Duane Ireland and Christopher R. Reutzel. (2011). ``Signaling Theory: A Review and Assessment.'' \emph {Journal of Management}. 37:1, 39-67.
 
-\item De Dreu, Carsten K. W. (1995). ``Coercive Power And Concession Making in Bilateral Negotiation.'' \emph{Journal of Conflict Resolution} 39, 646.
+%\item De Dreu, Carsten K. W. (1995). ``Coercive Power And Concession Making in Bilateral Negotiation.'' \emph{Journal of Conflict Resolution} 39, 646.
 
 \item Dixon, William. (1996). ``Third-Party Techniques for Preventing Conflict Escalation and Promoting Peaceful Settlement.'' \emph{International Organization} 50, 653-681. 
 
@@ -445,7 +445,7 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Fey, Mark and Kristopher W. Ramsay. (2011). ``Uncertainty and Incentives in Crisis Bargaining: Game-Free Analysis of International Conflict." \emph{American Journal of Political Science} 55, 149-169. 
 
-\item Filson, Darren and Suzanne Werner. (2007). ``Implications for War Onset, Duration, and Outcomes Sensitivity to Costs of Fighting versus Sensitivity to Losing the Conflict.'' \emph{Journal of Conflict Resolution} 51: 691.
+%\item Filson, Darren and Suzanne Werner. (2007). ``Implications for War Onset, Duration, and Outcomes Sensitivity to Costs of Fighting versus Sensitivity to Losing the Conflict.'' \emph{Journal of Conflict Resolution} 51: 691.
 
 \item Fortna, Virginia Page. (2003). \emph{ Peace Time: Cease-Fire Agreements and the Durability of Peace.} Princeton: Princeton University Press.
 
@@ -459,7 +459,7 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Iannaccone, Laurence. (1992). ``Sacrifice and Stigma: reducing free-riding in cults, communes, and other collectives.'' \emph{Journal of Political Economy} 100:2, 271-291.
 
-\item Komorita, Stuart S. (1973).  ``Concession-Making and Conflict Resolution.  \emph{Journal of Conflict Resolution} 17:4, 745-762.
+%\item Komorita, Stuart S. (1973).  ``Concession-Making and Conflict Resolution.  \emph{Journal of Conflict Resolution} 17:4, 745-762.
 
 \item Kranton, Rachel (1996). ``The formation of cooperative relationships.'' \emph{Journal of Law, Economics, and Organization}, 12:1, 214-233.
 
@@ -469,13 +469,15 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Myerson, Roger B. (1979). ``Incentive Compatibility and the Bargaining Problem." \emph {Econometrica} 47, 61-73. 
 
-\item Osgood, Charles E. (1962). \emph {An alternative to war or surrender.}  Oxford, England: University of  Illinois Press.
+%\item Osgood, Charles E. (1962). \emph {An alternative to war or surrender.}  Oxford, England: University of  Illinois Press.
 
 \item Prendergast, Canice and Lars Stole. (2001). ``The Non-Monetary Nature of Gifts.'' \emph {European Economic Review} 45:10, 1793-810. 
 
 \item Rabin, Matthew. (1993). ``Incorporating fairness into game theory and economics.'' \emph{American Economic Review} 83:5, 1281-1301.
 
-\item Rauchhaus, Robert. (2006). ``Asymmetric Information, Mediation, and Conflict Management." \emph{World Politics} 58:2, 207-401.
+\item Rauchhaus, Robert. (2006). ``Asymmetric Information, Mediation, and Conflict Management.'' \emph{World Politics} 58:2, 207-401.
+
+\item Slantchev, Branislav. (2011). ``Military Threats: The Costs of Coercion and the Price of Peace.'' Cambridge: Cambridge University Press.
 
 \item Smith, Alastair, and Alan Stam. (2003). ``Mediation and Peacekeeping in a Random Walk Model of Civil and Interstate War." \emph{International Studies Review} 5:4, 115-35.
 
